--- a/client/src/app/nav/nav.component.html
+++ b/client/src/app/nav/nav.component.html
@@ -2,6 +2,8 @@
   <div class="container">
     <a class="navbar-brand" href="#">Dating App</a>
 
+    @if (loggedIn) {
+
     <ul class="navbar-nav me-auto mb-2 mb-md-0">
       <li class="nav-item">
         <a class="nav-link">Matches</a>
@@ -12,7 +14,19 @@
       <li class="nav-item">
         <a class="nav-link">Messages</a>
       </li>
+      <li class="nav-item">
+        <a class="nav-link" (click)="logout()">Logout</a>
+      </li>
     </ul>
+    } @if(loggedIn){
+    <div class="dropdown">
+      <a href="" class="dropdown-toggle text-light">Welcome User</a>
+      <div class="dropdown-menu">
+        <a href="" class="dropdown-item">Edit profile</a>
+        <a href="" class="dropdown-item" (click)="logout()">Logout</a>
+      </div>
+    </div>
+    } @if (!loggedIn) {
     <form
       #loginForm="ngForm"
       (ngSubmit)="login()"
@@ -35,5 +49,6 @@
 
       <button class="btn btn-outline-success" type="submit">Login</button>
     </form>
+    }
   </div>
 </nav>
