--- a/client/src/app/nav/nav.component.html
+++ b/client/src/app/nav/nav.component.html
@@ -14,14 +14,11 @@
       <li class="nav-item">
         <a class="nav-link">Messages</a>
       </li>
-      <li class="nav-item">
-        <a class="nav-link" (click)="logout()">Logout</a>
-      </li>
     </ul>
     } @if(loggedIn){
-    <div class="dropdown">
-      <a href="" class="dropdown-toggle text-light">Welcome User</a>
-      <div class="dropdown-menu">
+    <div class="dropdown" dropdown>
+      <a dropdownToggle class="dropdown-toggle text-light">Welcome User</a>
+      <div *dropdownMenu class="dropdown-menu">
         <a href="" class="dropdown-item">Edit profile</a>
         <a href="" class="dropdown-item" (click)="logout()">Logout</a>
       </div>
