--- a/client/src/app/nav/nav.component.html
+++ b/client/src/app/nav/nav.component.html
@@ -2,7 +2,7 @@
   <div class="container">
     <a class="navbar-brand" href="#">Dating App</a>
 
-    @if (loggedIn) {
+    @if (accountService.currentUser()) {
 
     <ul class="navbar-nav me-auto mb-2 mb-md-0">
       <li class="nav-item">
@@ -15,7 +15,7 @@
         <a class="nav-link">Messages</a>
       </li>
     </ul>
-    } @if(loggedIn){
+    } @if(accountService.currentUser()){
     <div class="dropdown" dropdown>
       <a dropdownToggle class="dropdown-toggle text-light">Welcome User</a>
       <div *dropdownMenu class="dropdown-menu">
@@ -23,7 +23,7 @@
         <a href="" class="dropdown-item" (click)="logout()">Logout</a>
       </div>
     </div>
-    } @if (!loggedIn) {
+    } @if (!accountService.currentUser()) {
     <form
       #loginForm="ngForm"
       (ngSubmit)="login()"
