--- a/client/src/app/home/home.component.html
+++ b/client/src/app/home/home.component.html
@@ -15,7 +15,7 @@
     <div class="container">
       <div class="row justify-content-center">
         <div class="col-4">
-          <p>register form here!</p>
+          <app-register />
         </div>
       </div>
     </div>
