--- a/client/src/app/register/register.component.html
+++ b/client/src/app/register/register.component.html
@@ -11,6 +11,17 @@
     />
     <label>Username</label>
   </div>
+
+  <div class="mb-3">
+    <label>Who is your favorite user?</label>
+    <select name="" id="" class="form-select">
+      @for (user of usersFromHomeComponent; track $index) {
+      <option [value]="user.username">
+        {{ user.username }}
+      </option>
+      }
+    </select>
+  </div>
   <div class="mb-3 form-floating">
     <input
       type="text"
