--- a/client/src/app/register/register.component.html
+++ b/client/src/app/register/register.component.html
@@ -12,19 +12,9 @@
     <label>Username</label>
   </div>
 
-  <div class="mb-3">
-    <label>Who is your favorite user?</label>
-    <select name="" id="" class="form-select">
-      @for (user of usersFromHomeComponent(); track $index) {
-      <option [value]="user.username">
-        {{ user.username }}
-      </option>
-      }
-    </select>
-  </div>
   <div class="mb-3 form-floating">
     <input
-      type="text"
+      type="password"
       class="form-control"
       name="password"
       [(ngModel)]="model.password"
