--- a/client/src/app/nav/nav.component.html
+++ b/client/src/app/nav/nav.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
+<nav class="navbar navbar-expand-md navbar-dark fixed-top bg-primary">
   <div class="container">
     <a class="navbar-brand" routerLink="/">Dating App</a>
 
@@ -24,7 +24,9 @@
 
     @if(accountService.currentUser()){
     <div class="dropdown" dropdown>
-      <a dropdownToggle class="dropdown-toggle text-light">Welcome User</a>
+      <a dropdownToggle class="dropdown-toggle text-white font-bold"
+        >Welcome {{ accountService.currentUser()?.username | titlecase }}</a
+      >
       <div *dropdownMenu class="dropdown-menu">
         <a href="" class="dropdown-item">Edit profile</a>
         <a href="" class="dropdown-item" (click)="logout()">Logout</a>
@@ -51,7 +53,7 @@
         type="password"
       />
 
-      <button class="btn btn-outline-success" type="submit">Login</button>
+      <button class="btn btn-success" type="submit">Login</button>
     </form>
     }
   </div>
