--- a/client/src/app/errors/test-errors/test-errors.component.html
+++ b/client/src/app/errors/test-errors/test-errors.component.html
@@ -17,4 +17,14 @@
   >
     400 Validation Error
   </button>
+
+  @if (validationErrors.length > 0) {
+  <div class="row mt-5">
+    <ul class="text-danger">
+      @for (error of validationErrors; track $index) {
+      <li>{{ error }}</li>
+      }
+    </ul>
+  </div>
+  }
 </div>
